@@ -1,62 +1,114 @@
 ## Introduction
 
+The Concurrent Mark Sweep (CMS) collector is designed for applications that **prefer shorter garbage collection pauses** and that can afford to **share processor resources with the garbage collector while the application is running**. Typically applications that have a relatively large set of long-lived data (a large tenured generation) and run on machines with two or more processors tend to benefit from the use of this collector. However, this collector should be considered for any application with a low pause time requirement. The CMS collector is enabled with the command-line option `-XX:+UseConcMarkSweepGC`.
 
+Similar to the other available collectors, the CMS collector is generational; thus both minor and major collections occur. The CMS collector attempts to reduce pause times due to major collections by using separate garbage collector threads to trace the reachable objects concurrently with the execution of the application threads. During each major collection cycle, the CMS collector pauses all the application threads for a brief period at the beginning of the collection and again toward the middle of the collection. The second pause tends to be the longer of the two pauses. Multiple threads are used to do the collection work during both pauses. The remainder of the collection (including most of the tracing of live objects and sweeping of unreachable objects is done with one or more garbage collector threads that run concurrently with the application. Minor collections can interleave with an ongoing major cycle, and are done in a manner similar to the parallel collector (in particular, the application threads are stopped during minor collections).
 
 Before CMS, Serial, Parallel all STW.
 
-CMS（Concurrent Mark Sweep)收集器是⼀种以获取最短回收停顿时间为⽬标的收集器。
+CMS for Old GC, and Young GC still a pause by other collectors.
 
-CMS for Old GC, and Young GC still a pause by other collector.
-
-- Init Mark STW
+- Init Mark(STW)
 - Concurrent Mark
-- Finish Mark STW
-- Concurrent Sweep - Does not solve fragmentation
+- Remark Mark(STW) remark from `GC ROOT`, `Writter Barrier`
+- Concurrent Sweep
+
+
+```
+// CMS & ParNew code in same directory /hotspot/share/gc/cms (JDK12)
+UseConcMarkSweepGC                       := true
+UseParNewGC                              := true
+```
 
 
 
+#### Concurrent Mode Failure
+The CMS collector uses one or more garbage collector threads that run simultaneously with the application threads with the goal of completing the collection of the tenured generation before it becomes full. As described previously, in normal operation, the CMS collector does most of its tracing and sweeping work with the application threads still running, so only brief pauses are seen by the application threads. **However, if the CMS collector is unable to finish reclaiming the unreachable objects before the tenured generation fills up, or if an allocation cannot be satisfied with the available free space blocks in the tenured generation, then the application is paused and the collection is completed with all the application threads stopped.** The inability to complete a collection concurrently is referred to as `concurrent mode failure` and indicates the need to adjust the CMS collector parameters. If a concurrent collection is interrupted by an explicit garbage collection (`System.gc()`) or for a garbage collection needed to provide information for diagnostic tools, then a `concurrent mode interruption` is reported.
+
+#### Excessive GC Time and OutOfMemoryError
+The CMS collector throws an OutOfMemoryError if too much time is being spent in garbage collection: if more than 98% of the total time is spent in garbage collection and less than 2% of the heap is recovered, then an OutOfMemoryError is thrown. This feature is designed to prevent applications from running for an extended period of time while making little or no progress because the heap is too small. If necessary, this feature can be disabled by adding the option -XX:-UseGCOverheadLimit to the command line.
+
+**The policy is the same as that in the parallel collector, except that time spent performing concurrent collections is not counted toward the 98% time limit. In other words, only collections performed while the application is stopped count toward excessive GC time. Such collections are typically due to a concurrent mode failure or an explicit collection request (for example, a call to `System.gc`).**
+
+#### Floating Garbage
+The CMS collector, like all the other collectors in Java HotSpot VM, is a tracing collector that identifies at least all the reachable objects in the heap. In the parlance of Richard Jones and Rafael D. Lins in their publication Garbage Collection: Algorithms for Automated Dynamic Memory, it is an `incremental update collector`. **Because application threads and the garbage collector thread run concurrently during a major collection, objects that are traced by the garbage collector thread may subsequently become unreachable by the time collection process ends.** Such unreachable objects that have not yet been reclaimed are referred to as floating garbage. The amount of floating garbage depends on the duration of the concurrent collection cycle and on the frequency of reference updates, also known as mutations, by the application. Furthermore, because the young generation and the tenured generation are collected independently, each acts a source of roots to the other. As a rough guideline, try increasing the size of the tenured generation by 20% to account for the floating garbage. Floating garbage in the heap at the end of one concurrent collection cycle is collected during the next collection cycle.
+
+#### Pauses
+The CMS collector pauses an application twice during a concurrent collection cycle. The first pause is to mark as live the objects directly reachable from the roots (for example, object references from application thread stacks and registers, static objects and so on) and from elsewhere in the heap (for example, the young generation). This first pause is referred to as the `initial mark pause`. The second pause comes at the end of the concurrent tracing phase and finds objects that were missed by the concurrent tracing due to updates by the application threads of references in an object after the CMS collector had finished tracing that object. This second pause is referred to as the `remark pause`.
+
+#### Concurrent Phases
+The concurrent tracing of the reachable object graph occurs between the initial mark pause and the remark pause. During this concurrent tracing phase one or more concurrent garbage collector threads may be using processor resources that would otherwise have been available to the application. As a result, compute-bound applications may see a commensurate fall in application throughput during this and other concurrent phases even though the application threads are not paused. After the remark pause, a concurrent sweeping phase collects the objects identified as unreachable. Once a collection cycle completes, the CMS collector waits, consuming almost no computational resources, until the start of the next major collection cycle.
+
+#### Starting a Concurrent Collection Cycle
+With the serial collector a major collection occurs whenever the tenured generation becomes full and all application threads are stopped while the collection is done. In contrast, the start of a concurrent collection must be timed such that the collection can finish before the tenured generation becomes full; otherwise, the application would observe longer pauses due to concurrent mode failure. There are several ways to start a concurrent collection.
+
+Based on recent history, the CMS collector maintains estimates of the time remaining before the tenured generation will be exhausted and of the time needed for a concurrent collection cycle. Using these dynamic estimates, a concurrent collection cycle is started with the aim of completing the collection cycle before the tenured generation is exhausted. These estimates are padded for safety, because concurrent mode failure can be very costly.
+
+A concurrent collection also starts if the occupancy of the tenured generation exceeds an initiating occupancy (a percentage of the tenured generation). The default value for this initiating occupancy threshold is approximately `92%`, but the value is subject to change from release to release. This value can be manually adjusted using the command-line option `-XX:CMSInitiatingOccupancyFraction=<N>`, where <N> is an integral percentage (0 to 100) of the tenured generation size.
+
+#### Scheduling Pauses
+The pauses for the young generation collection and the tenured generation collection occur independently. They do not overlap, but may occur in quick succession such that the pause from one collection, immediately followed by one from the other collection, can appear to be a single, longer pause. To avoid this, the CMS collector attempts to schedule the remark pause roughly midway between the previous and next young generation pauses. This scheduling is currently not done for the initial mark pause, which is usually much shorter than the remark pause.
+
+#### Incremental Mode
+Note that the incremental mode is being deprecated in Java SE 8 and may be removed in a future major release.
+
+The CMS collector can be used in a mode in which the concurrent phases are done incrementally. Recall that during a concurrent phase the garbage collector thread is using one or more processors. The incremental mode is meant to lessen the effect of long concurrent phases by periodically stopping the concurrent phase to yield back the processor to the application. This mode, referred to here as i-cms, divides the work done concurrently by the collector into small chunks of time that are scheduled between young generation collections. This feature is useful when applications that need the low pause times provided by the CMS collector are run on machines with small numbers of processors (for example, 1 or 2).
+
+The concurrent collection cycle typically includes the following steps:
+- Stop all application threads, identify the set of objects reachable from roots, and then resume all application threads.
+- Concurrently trace the reachable object graph, using one or more processors, while the application threads are executing.
+- Concurrently retrace sections of the object graph that were modified since the tracing in the previous step, using one processor.
+- Stop all application threads and retrace sections of the roots and object graph that may have been modified since they were last examined, and then resume all application threads.
+- Concurrently sweep up the unreachable objects to the free lists used for allocation, using one processor.
+- Concurrently resize the heap and prepare the support data structures for the next collection cycle, using one processor.
+
+Normally, the CMS collector uses one or more processors during the entire concurrent tracing phase, without voluntarily relinquishing them. Similarly, one processor is used for the entire concurrent sweep phase, again without relinquishing it. This overhead can be too much of a disruption for applications with response time constraints that might otherwise have used the processing cores, particularly when run on systems with just one or two processors. Incremental mode solves this problem by breaking up the concurrent phases into short bursts of activity, which are scheduled to occur midway between minor pauses.
+
+The i-cms mode uses a duty cycle to control the amount of work the CMS collector is allowed to do before voluntarily giving up the processor. The duty cycle is the percentage of time between young generation collections that the CMS collector is allowed to run. The i-cms mode can automatically compute the duty cycle based on the behavior of the application (the recommended method, known as automatic pacing), or the duty cycle can be set to a fixed value on the command line.
 
 
-初始标记
-并发标记
-
-重新标记：
-因为并发标记的过程中可能有引用关系的变化，所以该阶段需要Stop The World。以`GC ROOT`，`Writter Barrier`中记录的对象为根节点，重新遍历。
-这里为什么还需要再遍历`GC ROOT`？因为`Writter Barrier`是作用在堆上的，无法感知到`GC ROOT`上引用关系的变更。
-
-并发清除
+### Basic Troubleshooting
+The i-cms automatic pacing feature uses statistics gathered while the program is running to compute a duty cycle so that concurrent collections complete before the heap becomes full. However, past behavior is not a perfect predictor of future behavior and the estimates may not always be accurate enough to prevent the heap from becoming full. If too many full collections occur, then try the steps in Table 8-2, "Troubleshooting the i-cms Automatic Pacing Feature", one at a time.
 
 
+Table Troubleshooting the i-cms Automatic Pacing Feature
 
-其中，初始标记、重新标记这两个步骤仍然需要“stop the world”。初始标记仅仅只是标记⼀下GC roots
-能够关联到的对象，速度很快。并发标记是进⾏GC roots Tracing过程。重新标记，修正并发标记期间⽤
-户程序就⾏运⾏⽽导致标记产⽣变动的那⼀部分对象。
-三个缺点：
-
-
-
-也是由于在垃圾收集阶段⽤户线程还需要
-运⾏，那也就还需要预留有⾜够的内存空间给⽤户线程使⽤，因此CMS收集器不能像其他收集器那样
-等到⽼年代⼏乎完全被填满了再进⾏收集，需要预留⼀部分空间提供并发收集时的程序运作使⽤。在
-JDK1.5的默认设置下，CMS收集器当⽼年代使⽤了68%的空间后就会被激活，这是⼀个偏保守的设
-置，如果在应⽤中⽼年代增⻓不是太快，可以适当调⾼参数-XX：CMSInitiatingOccupancyFraction
-的值来提⾼触发百分⽐，以便降低内存回收次数从⽽获取更好的性能，在JDK 1.6中，CMS收集器的启
-动阈值已经提升⾄92%。要是CMS运⾏期间预留的内存⽆法满⾜程序需要，就会出现⼀
-次“Concurrent Mode Failure”失败，这时虚拟机将启动后备预案：临时启⽤Serial Old收集器来重新
-进⾏⽼年代的垃圾收集，这样停顿时间就很⻓了
+| Step | Options |
+| --- | --- |
+| 1. Increase the safety factor. | -XX:CMSIncrementalSafetyFactor=<N> |
+| 2. Increase the minimum duty cycle. | -XX:CMSIncrementalDutyCycleMin=<N> |
+| 3. Disable automatic pacing and use a fixed duty cycle. | -XX:-CMSIncrementalPacing -XX:CMSIncrementalDutyCycle=<N> |
 
 
+### Measurements
+Example "Output from the CMS Collector" is the output from the CMS collector with the options -verbose:gc and -XX:+PrintGCDetails, with a few minor details removed. Note that the output for the CMS collector is interspersed with the output from the minor collections; typically many minor collections occur during a concurrent collection cycle. CMS-initial-mark indicates the start of the concurrent collection cycle, CMS-concurrent-mark indicates the end of the concurrent marking phase, and CMS-concurrent-sweep marks the end of the concurrent sweeping phase. Not discussed previously is the precleaning phase indicated by CMS-concurrent-preclean. Precleaning represents work that can be done concurrently in preparation for the remark phase CMS-remark. The final phase is indicated by CMS-concurrent-reset and is in preparation for the next concurrent collection.
+
+Example Output from the CMS Collector
+```
+[GC [1 CMS-initial-mark: 13991K(20288K)] 14103K(22400K), 0.0023781 secs]
+[GC [DefNew: 2112K->64K(2112K), 0.0837052 secs] 16103K->15476K(22400K), 0.0838519 secs]
+...
+[GC [DefNew: 2077K->63K(2112K), 0.0126205 secs] 17552K->15855K(22400K), 0.0127482 secs]
+[CMS-concurrent-mark: 0.267/0.374 secs]
+[GC [DefNew: 2111K->64K(2112K), 0.0190851 secs] 17903K->16154K(22400K), 0.0191903 secs]
+[CMS-concurrent-preclean: 0.044/0.064 secs]
+[GC [1 CMS-remark: 16090K(20288K)] 17242K(22400K), 0.0210460 secs]
+[GC [DefNew: 2112K->63K(2112K), 0.0716116 secs] 18177K->17382K(22400K), 0.0718204 secs]
+[GC [DefNew: 2111K->63K(2112K), 0.0830392 secs] 19363K->18757K(22400K), 0.0832943 secs]
+...
+[GC [DefNew: 2111K->0K(2112K), 0.0035190 secs] 17527K->15479K(22400K), 0.0036052 secs]
+[CMS-concurrent-sweep: 0.291/0.662 secs]
+[GC [DefNew: 2048K->0K(2112K), 0.0013347 secs] 17527K->15479K(27912K), 0.0014231 secs]
+[CMS-concurrent-reset: 0.016/0.016 secs]
+[GC [DefNew: 2048K->1K(2112K), 0.0013936 secs] 17527K->15479K(27912K), 0.0014814 secs
+]
+```
+The initial mark pause is typically short relative to the minor collection pause time. The concurrent phases (concurrent mark, concurrent preclean and concurrent sweep) normally last significantly longer than a minor collection pause, as indicated by Example 8-1, "Output from the CMS Collector". Note, however, that the application is not paused during these concurrent phases. The remark pause is often comparable in length to a minor collection. The remark pause is affected by certain application characteristics (for example, a high rate of object modification can increase this pause) and the time since the last minor collection (for example, more objects in the young generation may increase this pause).
 
 
+## Summary
+1. The Concurrent Mark Sweep (CMS) collector is a concurrent collector which prefer shorter garbage collection pauses.
 
 
-
-1.浮动垃圾，在并发标记的过程中（及之后阶段），可能存在原来被引用的对象变成无人引用了，而在这次gc是发现不会清理这些对象的。
-
-2.cpu敏感，因为用户程序是和GC线程同时运行的，所以会导致GC的过程中程序运行变慢，gc运行时间增长，吞吐量降低。默认回收线程是（CPU数量+3）/4，也就是cpu不足4个时，会有一半的cpu资源给GC线程。
-
-3.空间碎片，标记清除算法都有的问题。当碎片过多时，为大对象分配内存空间就会很麻烦，有时候就是老年代空间有大量空间剩余，但没有连续的大空间来分配当前对象，不得不提前触发full gc。CMS提供一个参数（-XX:+UseCMSCompactAtFullCollection），在Full Gc发生时开启内存合并整理。这个过程是STW的。同时还可以通过参数（-XX:CMSFullGCsBeforeCom-paction）来这只执行多少次不压缩的Full GC后，来一次压缩的。
-
-4.需要更大的内存空间，因为是同时运行的GC和用户程序，所以不能像其他老年代收集器一样，等老年代满了再触发GC，而是要预留一定的空间。CMS可以配置当老年代使用率到达某个阈值时（ -XX:CMSInitiatingOccupancyFraction=80 ），开始CMS GC。
-
-在old GC运行的过程中，可能有大量对象从年轻代晋升，而出现老年代存放不下的问题（因为这个时候垃圾还没被回收掉），该问题叫Concurrent Model Failure,这时候会启用Serial Old收集器，重新回收整个老年代。Concurrent Model Failure一般伴随着ParNew promotion failed（晋升担保失败）,解决这个问题的办法就是可以让CMS在进行一定次数的Full GC（标记清除）的时候进行一次标记整理算法，或者降低触发cms gc的阈值
+## References
+1. [Concurrent Mark Sweep (CMS) Collector](https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/cms.html)
